# bitcoin_project

./: bitcoin.conf  block_chain.sql  docker-compose.yml
.github/workflows/: Deploy to EC2.yml  aws.yml
conf_bitcoincore/: bitcoin.conf
docker_bitcoin/: docker-compose.yml
docker_bitcoin/rust_bitcoin/: Dockerfile
docker_bitcoin/rust_bitcoin/src/: main.rs
docker_bitcoin/vue_bitcoin_ts/: Dockerfile  package.json
docker_bitcoin/vue_bitcoin_ts/src/components/: FooterContent.vue  HeaderContent.vue  MarketData.vue  ScrollBar.vue
docker_bitcoin/vue_bitcoin_ts/src/components/Charts/: PriceDayChart.vue  PriceMonthChart.vue  PriceWeekChart.vue  PriceYearChart.vue
mysql-init/: init.sql
rust_bitcoin/: .dockerignore  Cargo.toml
rust_bitcoin/src/: main.rs
sql_bitcoin/: offchain_metric.sql  onchain_metrics.sql  price_day.sql  price_month.sql  price_week.sql  price_year.sql
vue_bitcoin_js/: README.md  package-lock.json  package.json
vue_bitcoin_js/src/: App.vue
vue_bitcoin_js/src/components/: ChartsContainer.vue  FooterContent.vue  HeaderContent.vue  MarketData.vue  ScrollBar.vue
vue_bitcoin_js/src/components/Charts/: PriceDayChart.vue  PriceMonthChart.vue  PriceWeekChart.vue  PriceYearChart.vue
vue_bitcoin_ts/: .dockerignore  Dockerfile  README.md  index.html  nginx.conf  package-lock.json
vue_bitcoin_ts/src/: App.vue
vue_bitcoin_ts/src/components/: ChartsContainer.vue  HeaderContent.vue  MarketData.vue  ScrollBar.vue
vue_bitcoin_ts/src/components/Charts/: PriceDayChart.vue  PriceMonthChart.vue  PriceWeekChart.vue  PriceYearChart.vue
