[package]
name = "rust_bitcoin"
version = "0.1.0"
edition = "2021"

[dependencies]
reqwest = { version = "0.12.8", features = ["json"] }
tokio = { version = "1", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
chrono = "0.4"
mysql = "25.0.1"
warp = "0.3.7"
bitcoincore-rpc = "0.19"


[[bin]]
name = "rust_bitcoin"
path = "src/main.rs"